2023-11-12T16:06:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6841735691 # 2035
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-12
* notice: last 14d: unq all: 5 6
* notice: prev accum: outdated-unq outdated-all / unq all: 287 456 / 297 467
* notice: next accum: outdated-unq outdated-all / unq all: 292 461 / 297 467
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-29] / []

2023-11-05T16:06:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6762366448 # 2014
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-05
* notice: last 14d: unq all: 9 11
* notice: prev accum: outdated-unq outdated-all / unq all: 287 456 / 296 466
* notice: next accum: outdated-unq outdated-all / unq all: 287 456 / 297 467
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-11-05]

2023-11-04T00:30:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6751540867 # 2009
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: last 14d: unq all: 8 10
* notice: prev accum: outdated-unq outdated-all / unq all: 287 456 / 295 464
* notice: next accum: outdated-unq outdated-all / unq all: 287 456 / 296 466
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-11-03]

2023-11-03T08:08:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6742706369 # 2007