@@ -1,12 +1,7 @@
 {
-  "count": 6,
-  "uniques": 5,
+  "count": 5,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2023-10-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-11-01T00:00:00Z",
       "count": 2,
